--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-homework-template",
+  "name": "goit-react-woolf-hw-04-images",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://filimon4uck.github.io/goit-react-woolf-hw-04-images/",
